--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "binance-api-node": "^0.12.2",
+    "ccxt": "^2.5.93",
     "debug": "^4.3.4",
     "node-fetch": "^3.3.0",
     "node-telegram-bot-api": "^0.60.0",
