load admins ids

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,5 @@
-TELEGRAM_BOT_TOKEN=
-TELEGRAM_CHAT_ID=
-TELEGEAM_CHAT_NAME
-BINANCE_API_KEY=
-BINANCE_API_SECRET=
+TELEGRAM_BOT_ADMIN_NAMES=john,doe
+TELEGRAM_BOT_TOKEN=...
+TELEGEAM_CHAT_NAME=my_chat
+BINANCE_API_KEY=..
+BINANCE_API_SECRET=...
